2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/user/macros.itexi: comment out funindex expansion. 

	* Documentation/user/music-glossary.tely: junk \oldaddlyrics
	everywhere.

	* GNUmakefile.in: fix wildcarding for scrips/out/ links. Thanks
	Karl Hammar.

	* Documentation/user/advanced-notation.itely (Balloon help): idem.

	* Documentation/user/changing-defaults.itely (Creating contexts): idem.

	* Documentation/user/programming-interface.itely (Running a
	function on all layout objects): idem.

	* Documentation/user/introduction.itely (Automated engraving):
	update \applyOutput syntax

	* lily/lyric-combine-music-iterator.cc (start_new_syllable):
	remove debugging hook.

	* configure.in (LINK_GXX_STATICALLY): use "" to allow $
	expansion. Backportme.

	* Documentation/user/GNUmakefile (TEXI2DVI_FLAGS): add -E.

	* stepmake/stepmake/texinfo-rules.make ($(outdir)/%.dvi): add
	TEXI2DVI_FLAGS to texi2dvi invocation. 

2006-05-24  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/chord-tremolo-*.cc: Reworked how \repeat "tremolo"
	works. More work is done by iterator now, and engraver has been
	very much simplified.

	* lily/translator-group.cc: try_music is now invoked through a
	listener

	* lily/*-iterator.cc: Massive cleanups. Junked
	try_music_in_children globally. Renamed try_music to report_event,
	and made that method descend to a bottom context automatically.

	* lily/event-iterator.cc: New file.

	* lily/output-property-iterator.cc,
	lily/old-lyric-combine-music-iterator.cc: Removed.

	* python/convert-rules.py: Modified the syntax for \applyOutput.

2006-05-23  Graham Percival  <gpermus@gmail.com>

	* stepmake/stepmake/texinfo-rules.make: added -E, allows pdf doc
	creation.

	* Documentation/user/ various: stuff that might have helped
	to fix the pdf creation, plus some minor doc additions.

	* Documentation/user/changing-defaults.itely: remove @b from
	@b{ @internasref{foo}}; this breaks texi2dvi -E.
